# inabot

./: README.md
install/: local_setup.sh  setup.sh
install/inabot_core/share/inabot_core/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/inabot_core/share/inabot_core/cmake/: inabot_coreConfig.cmake
install/inabot_core/share/inabot_core/config/: params.yaml
install/inabot_core/share/inabot_core/launch/: inabot_core.launch.py
install/inabot_msgs/share/inabot_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/inabot_msgs/share/inabot_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_inabot_msgs__rosidl_generator_cExport-noconfig.cmake  export_inabot_msgs__rosidl_generator_cExport.cmake  export_inabot_msgs__rosidl_generator_cppExport.cmake  export_inabot_msgs__rosidl_generator_pyExport-noconfig.cmake  export_inabot_msgs__rosidl_generator_pyExport.cmake  export_inabot_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_inabot_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_inabot_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_inabot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  inabot_msgsConfig.cmake  inabot_msgs__rosidl_typesupport_cExport-noconfig.cmake  inabot_msgs__rosidl_typesupport_cExport.cmake  inabot_msgs__rosidl_typesupport_cppExport-noconfig.cmake  inabot_msgs__rosidl_typesupport_cppExport.cmake  inabot_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  inabot_msgs__rosidl_typesupport_introspection_cExport.cmake  inabot_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  inabot_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/inabot_msgs/share/inabot_msgs/msg/: ObstacleStatus.idl
python/: README.md  dummy_map_path_test.py  dummy_path_test_node.py  motor_load_plotter.py  pose_graph.py  trajectory_plotter.py
setup/: install_humble.sh
src/battery_can/: README.md  package.xml  setup.cfg  setup.py
src/battery_can/battery_can/: battery_can_node.py
src/buzzard40_bird/: README.md  package.xml  setup.cfg  setup.py
src/inabot_core/: CMakeLists.txt  README copy.md  README.md  core.drawio
src/inabot_core/config/: params.yaml
src/inabot_core/include/imu/: SerialInterface.h  imu.hpp
src/inabot_core/include/kinematics/: base_kinematics.hpp  differential_drive.hpp  kinematics_factory.hpp  quaternion_drive.hpp
src/inabot_core/include/monitor/: monitor.hpp  network_monitor.hpp  system_monitor.hpp
src/inabot_core/include/motion/: velocity_profile.hpp
src/inabot_core/include/motor/: motor.hpp
src/inabot_core/include/motor/can_driver/: can_driver_factory.hpp  can_types.hpp  dummy_can_driver.hpp  i_can_interface.hpp
src/inabot_core/include/motor/controller/: i_motor_controller.hpp  motor_controller_factory.hpp
src/inabot_core/include/motor/utils/: motor_load_monitor.hpp
src/inabot_core/include/odom/: odometry.hpp
src/inabot_core/include/planner/common/: path_provider.hpp
src/inabot_core/include/planner/global/: astar_planner.hpp  global_planner.hpp
src/inabot_core/include/planner/local/mpc_motion_controller/: mpc_motion_controller.hpp
src/inabot_core/include/sensor/lidar/scan_merger/: scan_merger.hpp
src/inabot_core/include/utils/: crash_handler.hpp
src/inabot_core/include/wheel/: Wheel_manager_factory.hpp  differential_wheel_manager.hpp  i_wheel_manager.hpp  steerable_wheel_manager.hpp  steerable_wheel_pair_data.hpp  wheel_data.hpp
src/inabot_core/launch/: setup_can.sh
src/inabot_core/src/: core.cpp
src/inabot_core/src/imu/: README.md  SerialInterface.cpp  imu.cpp
src/inabot_core/src/kinematics/: README.md  differential_drive.cpp  mecanum_drive.cpp  omni_drive.cpp  quaternion_drive.cpp  steerable_wheel_drive.cpp
src/inabot_core/src/monitor/: README.md  device_topic_monitor.cpp  monitor.cpp  network_monitor.cpp  system_monitor.cpp
src/inabot_core/src/motion/: README.md  pid_controller.cpp  velocity_profile.cpp
src/inabot_core/src/motor/: README.md  motor.cpp  용어 정리 및 휠 속도 변환.pptx
src/inabot_core/src/motor/can_driver/: can_driver_factory.cpp  dummy_can_driver.cpp  peak_can_driver.cpp  socket_can_driver.cpp
src/inabot_core/src/motor/controller/: README.md  dummy_motor_controller.cpp  motor_controller_factory.cpp  roboteq_motor_controller.cpp
src/inabot_core/src/motor/kinematics/: motor_kinematics.cpp
src/inabot_core/src/motor/utils/: motor_load_monitor.cpp
src/inabot_core/src/odom/: odometry.cpp
src/inabot_core/src/planner/: README.md
src/inabot_core/src/planner/cam_obstacle/: README.md
src/inabot_core/src/planner/common/: README.md  path_provider.cpp
src/inabot_core/src/planner/global/: astar_planner.cpp  global_planner.cpp
src/inabot_core/src/planner/lidar_obstacle/: README.md  lidar_obstacle_detector.cpp
src/inabot_core/src/planner/local/mpc_motion_controller/: README.md  README_mpc_core_install_build.md  README_mpc_paramters.md  mpc_core.cpp  mpc_motion_controller.cpp
src/inabot_core/src/planner/local/pure_pursuit/: README.md  pure_pursuit.cpp
src/inabot_core/src/sensor/lidar/lidar_obstacle/: lidar_obstacle.cpp
src/inabot_core/src/sensor/lidar/scan_merger/: README.md  scan_merger.cpp
src/inabot_core/src/utils/: README.md  crash_handler.cpp  logger.cpp
src/inabot_core/src/wheel/: README.md  Wheel_manager_factory.cpp  differential_wheel_manager.cpp  steerable_wheel_manager.cpp
src/inabot_description/: CMakeLists.txt  README.md
src/inabot_interface/: interface.drawio
src/inabot_msgs/: CMakeLists.txt  README.md
src/inabot_slam/: CMakeLists.txt  README.md  package.xml
src/inabot_slam/config/: cartographer_2d_odom_imu.lua  mir-100-mapping.lua
src/inabot_slam/rviz/: slam.rviz
(+146 files in other folders)
