<?xml version="1.0"?>
<package format="3">
  <name>inabot_core</name>
  <version>0.1.0</version>
  <description>Core package for Inabot: motor, odometry, kinematics</description>

  <maintainer email="inatech@inatech.co.kr">inatech</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fmt</depend>
  <depend>tf2_ros</depend>
  <depend>control_toolbox</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <!-- 커스텀 메시지 패키지 의존 추가 -->
  <depend>inabot_msgs</depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
