<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inabot_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="inabot@inabot.co.kr">inabot</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>  

  <!-- Build dependencies -->
  <build_depend>builtin_interfaces</build_depend>  
  <build_depend>trajectory_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>  <!-- 추가 -->

  <!-- Execution dependencies -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- Member of group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="message_mappings.yaml"/>
  </export>
</package>

